<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mt40_base_mm"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        style="@style/mt40_base_mw"
        android:orientation="vertical">

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onHelloTriangleClick"
            android:text="@string/demo_hello_triangle"
            android:textAllCaps="false" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onBasisClick"
            android:text="@string/demo_basis" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onColorClick"
            android:text="@string/demo_color" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onNativeClick"
            android:text="@string/demo_basis" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onTextureClick"
            android:text="@string/demo_texture" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onCameraClick"
            android:text="@string/demo_camera" />

        <Button
            style="@style/SampleTextStyle"
            android:onClick="onFilterClick"
            android:text="@string/demo_filter" />

    </LinearLayout>
</ScrollView>